Implemented the 3 parts

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=0"/>
     <meta name="theme-color" content="#000000">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Michael Søby Andersen - Freelancer</title>
   </head>
   <body>
